# simple-vectordb-cpp

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  FILES_CREATED.md  PACKAGES_OVERVIEW.md  QUICK_START.md  README.md  bindings.cpp  build-packages.sh  cache.cpp  hnsw.cpp  main.cpp  priority_queue.h  simple_hnsw.h  test.py  test_wrapper.py  util.cpp  wasm_bindings.cpp
examples/angular-example/src/app/: app.component.ts
examples/react-example/: package.json
examples/react-example/src/: App.jsx
src/: bindings.cpp  cache.cpp  lru_cache.h  not_implemented_exception.h  priority_queue.h  simple_hnsw.h  util.cpp  wasm_bindings.cpp
